fixed bug with about me page on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body {
 
 /* CONTACT BUTTON */
 button {
-  font-family: Orbitron;
+  font-family: Roboto;
   display: inline-block;
   background-color: #5a378a;
   border-radius: 10px;
@@ -29,16 +29,14 @@ button {
 button:hover {
   background-color: rgb(145, 145, 233);
 }
-link {
-  font-family: Orbitron;
+.link {
+  font-family: Roboto;
   display: inline-block;
-  background-color: #5a378a;
-  border-radius: 10px;
-  border: 4px double #cccccc;
+  border-radius: 1px;
+  border: 1px solid #cccccc;
   color: #eeeeee;
   text-align: center;
-  font-size: 28px;
-  padding: 20px;
+  font-size: 16px;
   width: 150px;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -47,7 +45,7 @@ link {
   cursor: pointer;
   margin: 5px;
 }
-link:hover {
+.link:hover {
   background-color: rgb(145, 145, 233);
 }
 
@@ -166,14 +164,17 @@ textarea {
   background-color: #000000;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .about {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .aboutPhoto {
   justify-content: flex-start;
   padding-top: 1em;
+  display: flex;
 }
 .abouttitle {
   font-family: Orbitron;
@@ -186,7 +187,7 @@ textarea {
   color: #ffffff;
   font-size: 100%;
   padding-top: 2em;
-  width: 40vw;
+  width: 60vw;
   /* border-left: 4px dotted white; */
   justify-content: flex-end;
 }
